<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WeatherAndForecastFragmentOne"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E3E1FC"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="?attr/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usth_weather"
                android:layout_marginEnd="70dp"
                android:textColor="@color/white"
                android:textSize="30sp">
            </TextView>

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="70dp"
                android:contentDescription="@string/refresh"
                android:id="@+id/refresh_button_two"
                android:layout_marginEnd="20dp"
                android:src="@drawable/wt6"
                app:tint="@color/black"
                android:background="@null"
                android:gravity="center">
            </ImageButton>

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="70dp"
                android:contentDescription="@string/setting"
                android:id="@+id/setting_button_two"
                android:background="@null"
                android:src="@drawable/wt8">
            </ImageButton>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/frame"
            android:padding="10dp">

            <ImageView
                android:id="@+id/icon_weather1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/wt2"/>

            <TextView
                android:id="@+id/text_weather1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/_8c_rainy"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/text_weather2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentEnd="true"
                android:text="@string/hanoi"
                android:textSize="20sp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="#200000FF"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginTop="4dp">
            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/mon"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/sun"
                android:src="@drawable/wt9" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sunny_n30_33_c"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="#200000FF"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tue"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/windy"
                android:src="@drawable/wt7" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/windy_n13_17_c"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="#200000FF"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/wed"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/cloudy"
                android:src="@drawable/wt1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cloudy_n15_20_c"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="#200000FF"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/thu"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/rainy"
                android:src="@drawable/wt2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rainy_n22_28_c"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="#200000FF"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/fri"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/stormy"
                android:src="@drawable/wt3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/stormy_n15_17_c"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="#200000FF"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sat"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/partly_cloudy"
                android:src="@drawable/wt4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/partly_cloudy_n20_22_c"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="#200000FF"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sun"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/tornado"
                android:src="@drawable/wt5" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tornado_n10_18_c"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="4dp"-->
<!--            android:background="#200000FF"-->
<!--            android:orientation="horizontal"-->
<!--            android:padding="8dp">-->

<!--            <TextView-->
<!--                android:layout_width="50dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                android:text="Mon"-->
<!--                android:textColor="@android:color/black"-->
<!--                android:textSize="15sp" />-->

<!--            <ImageView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:layout_weight="1"-->
<!--                android:contentDescription="Rainy"-->
<!--                android:src="@drawable/wt2" />-->

<!--            <TextView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:gravity="center"-->
<!--                android:text="Rainy\n22 – 28°C"-->
<!--                android:textColor="@android:color/black"-->
<!--                android:textSize="15sp" />-->
<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="4dp"-->
<!--            android:background="#200000FF"-->
<!--            android:orientation="horizontal"-->
<!--            android:padding="8dp">-->

<!--            <TextView-->
<!--                android:layout_width="50dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:gravity="center"-->
<!--                android:text="Tue"-->
<!--                android:textColor="@android:color/black"-->
<!--                android:textSize="15sp" />-->

<!--            <ImageView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:layout_weight="1"-->
<!--                android:contentDescription="Stormy"-->
<!--                android:src="@drawable/wt3" />-->

<!--            <TextView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:gravity="center"-->
<!--                android:text="Stormy\n15 – 18°C"-->
<!--                android:textColor="@android:color/black"-->
<!--                android:textSize="15sp" />-->
<!--        </LinearLayout>-->

    </LinearLayout>


</FrameLayout>